packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/allow_ipv6net_wikipedia3.cbor
¢factioneallowftarget¡hipv6_netx2001::85a3::8a2e:370:7334